@@ -12,3 +12,5 @@
 - Python 3.6 invalid escape sequence deprecation fixes (https://github.com/zdohnal/system-config-printer/pull/60)
 - Adds printer properties dialog vertical expansion (https://github.com/zdohnal/system-config-printer/pull/61)
 - Replace icons deprecated by GTK 3.0 by non-deprecated ones (https://github.com/zdohnal/system-config-printer/pull/62) 
+- Improvements of discovered devices/conection type lists in new-printer wizard, more debug output (https://github.com/zdohnal/system-config-printer/pull/65)
+- replace libgnome-keyring by libsecret (https://github.com/zdohnal/system-config-printer/issues/51)
